--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "15.0.1"
+  },
   "dependencies": {
     "@discordjs/node-pre-gyp": "^0.1.0",
     "detect-libc": "^1.0.3",
